# MainPlaySoft.py

./: pyproject.toml
changelog/: 0.0.1.json  0.0.1.md  README.md
src/MainPlaySoft/: __main__.py  core.py  depends.py  dir.py  lang.py
src/NAME/: __init__.py
