[tool.poetry]
name = "{NAME}"
version = "0.0.1"
description = "null"
authors = ["MainPlay TG <xbox.roman6666666666@gmail.com>"]
readme = "README.md"
repository = "https://github.com/MainPlay-TG/{NAME}.py"
packages = [
    { include = "{NAME}", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
